feat: implement Google Books and Gemini integration
- Add GoogleBookController and related DTOs for handling Google Books API responses.
- Create GoogleBookService to fetch book data from Google Books API.
- Implement GeminiConfig for Gemini API client configuration.
- Add GeminiService for fetching book metadata from Gemini API.
- Introduce SearchInput component for enhanced search functionality.
- Create hooks for Google Books and Gemini API interactions.
- Add types for Google Books and Gemini API responses.
- Implement search functionality for book images via Search API.